Fixed Overflow Issue

--- a/djangoproject/scss/_style.scss
+++ b/djangoproject/scss/_style.scss
@@ -20,6 +20,7 @@ body {
     line-height: 1.6;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
+    overflow-wrap: break-word;
 
     .layout-secondary,
     [role="complementary"] {
